fix(@vtmn/css): wrong color of close icon in text-input component

--- a/packages/sources/css/src/components/navigation/search/src/index.css
+++ b/packages/sources/css/src/components/navigation/search/src/index.css
@@ -96,7 +96,7 @@
   font-size: var(--vtmn-typo_title-5-font-size);
 }
 
-.vtmn-search_buttons > .vtmn-btn:first-child {
+.vtmn-search_buttons > .vtmn-btn > span[class='vtmx-close-line'] {
   color: var(--vtmn-semantic-color_content-tertiary);
 }
 
